--- a/wp-content/themes/collins-music-academy/templates/index.html
+++ b/wp-content/themes/collins-music-academy/templates/index.html
@@ -1,5 +1,72 @@
 <!-- wp:template-part {"slug": "header"} /-->
 
 <!-- wp:heading {"level": 1} -->
-<h1>Music Academy</h1>
+<h1><span>Welcome to </span>Collins Music Academy</h1>
 <!-- /wp:heading -->
+
+<!-- wp:image -->
+<figure class="wp-block-image">
+  <img src="https://picsum.photos/1280/400" alt="Collins Music Academy" />
+</figure>
+<!-- /wp:image -->
+
+<!-- wp:paragraph -->
+<p>
+  Here at the Academy, we provide high-quality, personalized music instruction
+  to students of all ages.
+</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:heading {"level":2} -->
+<h2 class="wp-block-heading">Our Founder</h2>
+<!-- /wp:heading -->
+
+<!-- wp:heading {"level":3} -->
+<h3 class="wp-block-heading">Sarah Collins</h3>
+<!-- /wp:heading -->
+
+<!-- wp:paragraph -->
+<p>
+  Sarah Collins is a dedicated, passionate music educator who has been teaching
+  guitar and piano for over 15 years.
+</p>
+<!-- /wp:paragraph -->
+
+<!-- wp:heading {"level":2} -->
+<h2 class="wp-block-heading">Need more proof?</h2>
+<!-- /wp:heading -->
+
+<!-- wp:heading {"level":3} -->
+<h3 class="wp-block-heading">Listen to our past students</h3>
+<!-- /wp:heading -->
+
+<!-- wp:group {"tagName": "div"} -->
+<div class="wp-block-group">
+  <!-- wp:group {"tagName":"div"} -->
+  <div class="wp-block-group testimonial">
+    <!-- wp:paragraph -->
+    <p class="wp-block-paragraph firstTestimonial">
+      "I've been taking lessons with Sarah for two years now and I have grown so
+      much as a musician in that short time."
+    </p>
+    <!-- /wp:paragraph -->
+    <!-- wp:paragraph -->
+    <p>- John Doe</p>
+    <!-- /wp:paragraph -->
+  </div>
+  <!-- /wp:group -->
+  <!-- wp:group {"tagName":"div"} -->
+  <div class="wp-block-group testimonial">
+    <!-- wp:paragraph -->
+    <p class="wp-block-paragraph firstTestimonial">
+      "Before taking lessons with Paige, my guitar just collected dust in a
+      corner of my room. Now, I can play Free Bird!"
+    </p>
+    <!-- /wp:paragraph -->
+    <!-- wp:paragraph -->
+    <p>- Jane Doe</p>
+    <!-- /wp:paragraph -->
+  </div>
+  <!-- /wp:group -->
+</div>
+<!-- /wp:group -->
