--- a/wp-content/themes/collins-music-academy/templates/page-lessons.html
+++ b/wp-content/themes/collins-music-academy/templates/page-lessons.html
@@ -1,3 +1,15 @@
+<!-- wp:template-part {"slug":"header"} /-->
+
 <!-- wp:heading {"level":1} -->
-<h1 class="wp-block-heading">Lessons</h1>
+<h1 class="wp-block-heading">Collins Music Academy</h1>
+<!-- /wp:heading -->
+
+<!-- wp:image -->
+<figure class="wp-block-image">
+  <img src="https://picsum.photos/1280/400" alt="Collins Music Academy" />
+</figure>
+<!-- /wp:image -->
+
+<!-- wp:heading {"level":2} -->
+<h2 class="wp-block-heading"></h2>
 <!-- /wp:heading -->
