--- a/wp-content/themes/collins-block/templates/index.html
+++ b/wp-content/themes/collins-block/templates/index.html
@@ -59,3 +59,18 @@
 	<!-- wp:custom-blocks/instructors-list /-->
 </section>
 <!-- /wp:group -->
+
+<!-- wp:group {"tagName": "section"} -->
+<section class="wp-block-group">
+	<!-- wp:heading {"level":3} -->
+	<h3 class="wp-block-heading">Want to become a master musician?</h3>
+	<!-- /wp:heading -->
+	<!-- wp:button -->
+	<div class="wp-block-button">
+		<a class="wp-block-button__link" href="/page-lessons"
+			>Book a Lesson Today!</a
+		>
+	</div>
+	<!-- /wp:button -->
+</section>
+<!-- /wp:group -->
