--- a/wp-content/themes/collins-block/templates/page-instructors.html
+++ b/wp-content/themes/collins-block/templates/page-instructors.html
@@ -14,104 +14,4 @@
 <h2 class="wp-block-heading">Meet our Instructors</h2>
 <!-- /wp:heading -->
 
-<!-- wp:group -->
-<div class="wp-block-group">
-	<!-- wp:group -->
-	<div class="wp-block-group">
-		<!-- wp:group -->
-		<div class="wp-block-group">
-			<!-- wp:heading {"level":3} -->
-			<h3 class="wp-block-heading">Sarah Collins</h3>
-			<!-- /wp:heading -->
-			<!-- wp:paragraph -->
-			<p>
-				Sarah Collins is a dedicated, passionate music educator who has been
-				teaching guitar and piano for over 15 years.
-			</p>
-			<a href="#">Contact Sarah</a>
-			<!-- /wp:paragraph -->
-		</div>
-		<!-- /wp:group -->
-		<!-- wp:image -->
-		<figure class="wp-block-image">
-			<img src="https://picsum.photos/200/200" alt="Sarah Collins" />
-		</figure>
-		<!-- /wp:image -->
-	</div>
-	<!-- /wp:group -->
-
-	<!-- wp:group -->
-	<div class="wp-block-group">
-		<!-- wp:group -->
-		<div class="wp-block-group">
-			<!-- wp:heading {"level":3} -->
-			<h3 class="wp-block-heading">Jane Shepard</h3>
-			<!-- /wp:heading -->
-			<!-- wp:paragraph -->
-			<p>
-				Jane Shepard has been teaching with Collins for 10 years and is a master
-				of the violin. She loves working with students and helping them grow as
-				musicians.
-			</p>
-			<a href="#">Contact Jane</a>
-			<!-- /wp:paragraph -->
-		</div>
-		<!-- /wp:group -->
-		<!-- wp:image -->
-		<figure class="wp-block-image">
-			<img src="https://picsum.photos/200/200" alt="Jane Shepard" />
-		</figure>
-		<!-- /wp:image -->
-	</div>
-	<!-- /wp:group -->
-
-	<!-- wp:group -->
-	<div class="wp-block-group">
-		<!-- wp:group -->
-		<div class="wp-block-group">
-			<!-- wp:heading {"level":3} -->
-			<h3 class="wp-block-heading">Michael Douglas</h3>
-			<!-- /wp:heading -->
-			<!-- wp:paragraph -->
-			<p>
-				Michael Douglas left his claim to fame as a drummer to teach at Collins.
-				He has taught here for 4 years and never regretted his choice for a day.
-			</p>
-			<a href="#">Contact Michael</a>
-			<!-- /wp:paragraph -->
-		</div>
-		<!-- /wp:group -->
-		<!-- wp:image -->
-		<figure class="wp-block-image">
-			<img src="https://picsum.photos/200/200" alt="Michael Douglas" />
-		</figure>
-		<!-- /wp:image -->
-	</div>
-	<!-- /wp:group -->
-
-	<!-- wp:group -->
-	<div class="wp-block-group">
-		<!-- wp:group -->
-		<div class="wp-block-group">
-			<!-- wp:heading {"level":3} -->
-			<h3 class="wp-block-heading">Walter White</h3>
-			<!-- /wp:heading -->
-			<!-- wp:paragraph -->
-			<p>
-				Collins' newest instructor, Walter has a rich knowledge of music history
-				and music theory. He shares this knowledge with all students who would
-				like to gain an appreciation for the music they play.
-			</p>
-			<a href="#">Contact Walter</a>
-			<!-- /wp:paragraph -->
-		</div>
-		<!-- /wp:group -->
-		<!-- wp:image -->
-		<figure class="wp-block-image">
-			<img src="https://picsum.photos/200/200" alt="Walter White" />
-		</figure>
-		<!-- /wp:image -->
-	</div>
-	<!-- /wp:group -->
-</div>
-<!-- /wp:group -->
+<!-- wp:custom-blocks/instructors-list /-->
