--- a/wp-content/themes/collins-block/templates/404.html
+++ b/wp-content/themes/collins-block/templates/404.html
@@ -4,6 +4,12 @@
 <h1 class="wp-block-heading">404: Page Not Found</h1>
 <!-- /wp:heading -->
 
+<!-- wp:image -->
+<figure class="wp-block-image">
+	<img src="https://picsum.photos/1340/300" alt="Placeholder image" />
+</figure>
+<!-- /wp:image -->
+
 <!-- wp:paragraph -->
 <p class="wp-block-paragraph">
 	Sorry, we lost the rythym and couldn't find your page.
