--- a/wp-content/themes/collins-block/src/instructors-list/style.scss
+++ b/wp-content/themes/collins-block/src/instructors-list/style.scss
@@ -21,4 +21,15 @@
 			margin-left: -50px;
 		}
 	}
+
+	div {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		h4 {
+			font-size: 18px;
+			margin: 0;
+		}
+	}
 }
